[lint][py] Set up lintrunner for executorch
ghstack-source-id: bf9d9a98753e81c86593c2cf16cc48b8766ded9a
Pull Request resolved: https://github.com/pytorch/executorch/pull/219

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ bundled_program/serialize/scalar_type.fbs
 *.swp
 *~
 .~lock.*
+
+# clang tooling storage location
+.clang-format-bin
+.clang-tidy-bin
+.lintbin
