[cmake] Fix CI job
Summary: Fix an issue caused by #1036

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

ghstack-source-id: 6c621f1b516a0568fdae71c678498ee457e99c0a
Pull Request resolved: https://github.com/pytorch/executorch/pull/1115

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -279,14 +279,14 @@ if(EXECUTORCH_BUILD_GFLAGS)
 endif()
 
 
-# Install `executorch` library as well as `ExecuTorchConfig.cmake`
+# Install `executorch` library as well as `executorch-config.cmake`
 # under ${CMAKE_INSTALL_PREFIX}/
 install(
   TARGETS executorch
   DESTINATION lib
   INCLUDES DESTINATION ${_common_include_directories}
 )
-install(FILES build/ExecuTorchConfig.cmake DESTINATION lib/cmake/ExecuTorch)
+install(FILES build/executorch-config.cmake DESTINATION lib/cmake/ExecuTorch)
 
 #
 # executor_runner: Host tool that demonstrates program execution.
