Introduce pybind11 and build extension/pybindings/portable_lib (#332)
Summary:
As titled

Pull Request resolved: https://github.com/pytorch/executorch/pull/332

Differential Revision: D49254089

Pulled By: larryliu0820

fbshipit-source-id: f4c53ca162ee32e60003e1d4bfe1c2f4e47c4a16

--- a/pytest.ini
+++ b/pytest.ini
@@ -36,6 +36,8 @@ addopts =
     kernels/test/test_case_gen.py
     # backends/arm
     backends/arm/test
+    # test
+    test/end2end/test_end2end.py
 
 # run the same tests multiple times to determine their
 # flakiness status. Default to 50 re-runs
