--- a/backends/arm/CMakeLists.txt
+++ b/backends/arm/CMakeLists.txt
@@ -3,6 +3,7 @@
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
 cmake_minimum_required(VERSION 3.19)
+project(arm_backend)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
