[CI] Fix selective build CI job
Summary: Add C++17 support. There are several use cases of C++17
features in executor_runner.cpp so we can't do C++11 only.

Test Plan:

Reviewers:

Subscribers:

Tasks:

Tags:

ghstack-source-id: d804cf51e7997bd3389ffc2c28e118bfa211078a
Pull Request resolved: https://github.com/pytorch/executorch/pull/1128

--- a/examples/selective_build/CMakeLists.txt
+++ b/examples/selective_build/CMakeLists.txt
@@ -27,6 +27,11 @@ set(TORCH_ROOT ${EXECUTORCH_ROOT}/third-party/pytorch)
 include(${EXECUTORCH_ROOT}/build/Utils.cmake)
 include(${EXECUTORCH_ROOT}/build/Codegen.cmake)
 
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+  # Can't set to 11 due to executor_runner.cpp make_unique
+endif()
+
 set(_common_compile_options -Wno-deprecated-declarations -fPIC)
 
 # Let files say "include <executorch/path/to/header.h>".
