--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -144,9 +144,7 @@ jobs:
         CONDA_ENV=$(conda env list --json | jq -r ".envs | .[-1]")
         conda activate "${CONDA_ENV}"
 
-        source .ci/scripts/utils.sh
-        install_flatc_from_source
-        install_executorch
+        PYTHON_EXECUTABLE=python bash .ci/scripts/setup-linux.sh cmake
         # Test selective build
         source /opt/arm-sdk/setup_path.sh
         PYTHON_EXECUTABLE=python bash examples/arm/run.sh /opt/arm-sdk buck2
